--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,16 @@
 body {
     margin: 0;
 }
+
+table, th, tr {
+    border: 1px solid black;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+/* th {
+    width: 10px;
+} */
