--- a/public/style.css
+++ b/public/style.css
@@ -1,6 +1,7 @@
-/* body {
-    margin: 0;
-} */
+body {
+    /* margin: 0; */
+    word-break: break-all;
+}
 
 table, th, tr {
     border: 1px solid black;
@@ -19,9 +20,19 @@ table {
 .maintopics .date{
     width: 200px;
     text-align: center;
+    vertical-align: text-top;
+}
+
+.maintopics .topics, .viewtopic .text{
+    padding-right: 20px;
+    word-break: break-all;
 }
 
 .viewtopic .info{
     width: 200px;
-    /* text-align: center; */
+    vertical-align: text-top;
+}
+
+textarea {
+    resize: none;
 }
