--- a/public/style.css
+++ b/public/style.css
@@ -5,7 +5,7 @@ body {
     /* background-color: rgb(247, 247, 247); */
 
     background: rgb(232,232,252);
-    background: linear-gradient(0deg, rgba(218,232,252,1) 12%, rgba(245,255,255,1) 67%);
+    background: linear-gradient(-25deg, rgb(197, 208, 223) 12%, rgba(245,255,255,1) 67%);
 }
 
 h1 {
@@ -13,6 +13,7 @@ h1 {
 }
 
 header {
+    position: relative;
     display: flex;
     background-color: rgb(121, 124, 207);
     padding: 20px;
@@ -28,14 +29,14 @@ header a{
 }
 
 header .usermenu{
-    color: black;
+    color: white;
     position: absolute;
     right: 0;
     padding-right: 20px;
 }
 
 header .usermenu a{
-    color: black;
+    color: white;
 }
 
 header .usermenu a:hover{
@@ -75,7 +76,7 @@ table {
 .maintopics .topics i{
     position: absolute;
     bottom: 0;
-    color: grey;
+    color: rgb(77, 77, 77);
     font-size: 14px;
 }
 
@@ -105,6 +106,7 @@ table {
 
 .maintopics .date{
     text-align: right;
+    padding-right: 20px;
     font-size: 14px;
 }
 
@@ -113,10 +115,10 @@ table {
     word-break: break-all;
 }
 
-.viewtopic .text{
+/* .viewtopic .text{
     line-height: 17px;
-    /* white-space: pre; */
-}
+    white-space: pre;
+} */
 
 .viewtopic .info{
     width: 200px;
@@ -144,5 +146,27 @@ textarea {
 footer {
     background-color: rgb(121, 124, 207);
     /* width: 100%;
-    height: 100px; */
+    height: 70px;
+    margin-top: 75px; */
+}
+
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
 }
